force-app/main/default/objects/vlocity_ins__ContractRecipient__c/vlocity_ins__ContractRecipient__c.object-meta.xml
<CustomObject>
    <description>Provides information about the status of each recepient in a DocuSign eSignature envelope.</description>
    <label>Contract Recipient</label>
    <nameField>
        <displayFormat>REC_{000000}</displayFormat>
        <label>Contract Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>