force-app/main/default/objects/vlocity_ins__ContractRecipient__c/fields/vlocity_ins__HostEmail__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__HostEmail__c</fullName>
    <description>This is used for in person signer type of recipient.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Host Email</label>
    <type>Email</type>
</CustomField>