force-app/main/default/objects/vlocity_ins__ContractRecipient__c/fields/vlocity_ins__RecipientLocaleCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RecipientLocaleCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient Locale Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>